# writingUnicorns

./: Cargo.toml  PLUGINS.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-09-editor-ux-features.md
docs/superpowers/specs/: 2026-04-09-editor-ux-features-design.md
scripts/: New-Icon.ps1  cu.cmd  install-cli.ps1  install-cli.sh
src/: app.rs  main.rs  nav_history.rs
src/app/: debug_ops.rs  file_ops.rs  lsp_ops.rs  mod.rs  navigation.rs  workspace_search.rs
src/config/: mod.rs
src/dap/: client.rs  manager.rs  transport.rs  types.rs
src/editor/: auto_close.rs  autocomplete.rs  bracket_match.rs  buffer.rs  cursor.rs  diff.rs  folding.rs  highlight.rs  hover.rs  indent.rs  input.rs  line_diff.rs  mod.rs  multi_cursor.rs  search.rs  utils.rs  word_analysis.rs
src/extension/: ffi_plugin.rs  installer.rs  loader.rs  manifest.rs  mod.rs  registry.rs  template.rs  ui.rs
src/extension/builtin/: data_lang.rs  docker_lang.rs  mod.rs  python_lang.rs  rust_lang.rs  (+2 more)
src/filetree/: entry.rs  icons.rs  mod.rs
src/git/: blame.rs  branches.rs  commit.rs  merge.rs  mod.rs  staging.rs  status.rs
src/lsp/: client.rs  manager.rs  mod.rs  transport.rs
src/plugin/: manager.rs  mod.rs  types.rs
src/runner/: mod.rs
src/tabs/: mod.rs
src/terminal/: ansi.rs  colors.rs  mod.rs  screen_buffer.rs  shell.rs
src/ui/: debugger.rs  git_panel.rs  layout.rs  merge_panel.rs  minimap.rs  mod.rs  palette.rs  run_panel.rs  search.rs  settings.rs  shortcuts.rs  statusbar.rs
wix/: License.rtf  main.wxs
(+1 files in other folders)
