[package]
name = "coding-unicorns"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "coding-unicorns"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
ropey = "1.6"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
lsp-types = "0.97"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "7"
git2 = "0.20"
portable-pty = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
fuzzy-matcher = "0.3"
crossbeam-channel = "0.5"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
libloading = "0.8"
rfd = "0.15"
egui-phosphor = "0.9"
vte = "0.13"
miniz_oxide = { version = "0.9.1", default-features = false, features = [
  "with-alloc",
] }
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp", "ico"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
